# Dust-Monitoring

./: README.md
Dumopro_Data_Analysis_WebApp/: .env.example  .gitignore  docker-compose.yml  pyproject.toml  requirements.txt  설치 가이드.md
Dumopro_Data_Analysis_WebApp/apps/api/: Dockerfile  deps.py  main.py
Dumopro_Data_Analysis_WebApp/apps/api/routes/: chart.py  health.py  raw.py  regression.py  settings.py  stations.py  stream.py
Dumopro_Data_Analysis_WebApp/apps/api/services/: regression.py  sse_broadcaster.py
Dumopro_Data_Analysis_WebApp/apps/poller/: Dockerfile  backfill.py  freezer.py  health.py  main.py  station_task.py
Dumopro_Data_Analysis_WebApp/docker/: docker-compose.deploy.yml  docker-compose.yml  redis.conf
Dumopro_Data_Analysis_WebApp/frontend/: index.html
Dumopro_Data_Analysis_WebApp/frontend/css/: classic.css
Dumopro_Data_Analysis_WebApp/frontend/js/: activity.js  api.js  app.js  chart.js  detail.js  grid.js  sidebar.js  sse.js  sync.js
Dumopro_Data_Analysis_WebApp/libs/dumopro_core/: __init__.py  buckets.py  candles.py  config.py  db.py  keys.py  models.py  redis_client.py  serialize.py
Dumopro_Data_Analysis_WebApp/refs/: dumopro_analysis_app_plan.md
Dumopro_Data_Analysis_WebApp/tests/unit/: test_buckets.py  test_candles.py  test_db_sources.py
SocketDaim/libs/gw_proto/: pyproject.toml
SocketDaim/libs/gw_proto/gw_proto/: __init__.py  errors.py  framing.py  messages.py
SocketDaim/libs/gw_proto/tests/: test_codec.py  test_framing.py  test_loas_cctv_framing.py  test_loas_cctv_server.py  test_loas_dust_framing.py  test_messages.py  (+3 more)
(+200 files in other folders)
