[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dumopro-analysis"
version = "0.1.0"
description = "Dumopro Data Analysis WebApp — candle charts + regression over shared PostgreSQL dust-sensor store"
requires-python = ">=3.11"
dependencies = [
    "asyncpg==0.29.0",
    "redis==5.0.8",
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    "numpy==2.1.1",
    "scikit-learn==1.5.2",
    "orjson==3.10.7",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "httpx==0.27.2",
]

[tool.setuptools.packages.find]
where = ["libs"]
include = ["dumopro_core*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
